--- a/app/src/main/res/layout/content_generator.xml
+++ b/app/src/main/res/layout/content_generator.xml
@@ -21,13 +21,14 @@
         android:textSize="20dp"
         android:textColor="#ffffff"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Engage"
+        android:text="ENGAGE"
         android:id="@+id/myButton"
         android:layout_above="@+id/editText"
         android:layout_centerHorizontal="true" />
@@ -45,7 +46,8 @@
         android:textColor="#ffffff"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="43dp" />
+        android:layout_marginBottom="43dp"
+        android:gravity="center" />
 
     <CheckBox
         android:layout_width="wrap_content"
