--- a/app/src/main/res/layout/content_generator.xml
+++ b/app/src/main/res/layout/content_generator.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Avalanche Password Generator"
+        android:text="Password Hero"
         android:id="@+id/textView"
         android:textSize="20dp"
         android:textColor="#ffffff"
